logs/gtdbtk.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gtdbtk'...
Compiling './lib/python3.5/site-packages/gtdbtk/classify.py'...
***   File "./lib/python3.5/site-packages/gtdbtk/classify.py", line 241
    print "THERE RESULTS SHOULD BE REFINED TO SEE IF A GENOME CAN BE ASSIGNED TO ANY SISTER TAXON"
                                                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gtdbtk/config'...
Listing './lib/python3.5/site-packages/gtdbtk/external'...
Compiling './lib/python3.5/site-packages/gtdbtk/external/hmm_aligner.py'...
***   File "./lib/python3.5/site-packages/gtdbtk/external/hmm_aligner.py", line 221
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gtdbtk/relative_distance.py'...
***   File "./lib/python3.5/site-packages/gtdbtk/relative_distance.py", line 224
    print '[Warning] Species name %s for %s is invalid: %s' % (species_name, taxon_id, error_msg)
                                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gtdbtk-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
